# elma-classic2

./: .clang-format  .clang-format-ignore  .clang-tidy  .gitignore  ALL.H  CLAUDE.md  CONTRIBUTING.md  CUSTOM.CPP  DOBOZ.CPP  DOBOZ.H  D_PIC.CPP  ECSET.CPP  ECSET.H  EDITHELP.CPP  EDITHELP.H  EDITMENU.CPP  EDITMENU.H  EDITPLAY.CPP  EDITPLAY.H  EDITTOLT.CPP  EDITTOLT.H  EDITTOOL.CPP  EDITTOOL.H  EDITUJ.CPP  EDITUJ.H  ED_CHECK.CPP  ED_CHECK.H  FOGOCSKA.CPP  FOGOCSKA.H  GYURU.CPP  GYURU.H  HANGHIGH.H  H_WAV.CPP  JATEKOS.CPP  JATEKOS.H  KIRAJ320.CPP  KIRAJZOL.H  KISKEP.CPP  KISKEP.H  KOZOS.CPP  (+141 more)
.github/workflows/: ci.yaml
F_WIN/: W_SOUND2.CPP
docs/: BUILDING.md
esp32/: CMakeLists.txt  README.md  partitions.csv  sdkconfig.defaults
esp32/assets/: README.md
esp32/main/: CMakeLists.txt  badge_config.h  badge_input.cpp  badge_input.h  badge_leds.cpp  badge_leds.h  badge_menu.cpp  badge_menu.h  compat.h  lgr_esp32.cpp  main.cpp  platform_esp32.cpp  platform_esp32.h  qopen_esp32.cpp  st7789_driver.cpp  st7789_driver.h  stubs.cpp
include/: log.h  main.h
include/debug/: profiler.h
include/directinput/: scancodes.h
include/editor/: canvas.h  editor.h  help.h  screen_pic.h  tool.h  topology.h  window.h
include/eol/: chat.h  console.h  eol.h  eol_events.h  eol_table.h  eol_types.h  fps.h  null_protocol.h  pacer.h  protocol.h  settings.h  status_messages.h
include/game/: driver.h  game.h  level_load.h  recorder.h
include/level/: level.h  segments.h
include/menu/: ball.h  ball_collision.h  dialog.h  external.h  nav.h  options.h  pic.h  player.h  rec_list.h  replay.h  replay_cache.h
include/physics/: init.h
include/pic/: abc8.h  anim.h  lgr.h  pic8.h  piclist.h  surface.h
include/platform/: implementation.h  text_input.h  utils.h
include/platform/sdl/: gl_renderer.h  keyboard.h
include/renderer/: affine.h  canvas.h  grass.h  object_overlay.h  render.h  timer.h
include/sound/: wav.h
include/test/: platform_headless.h  replay_data_vsync.h  test_replay.h
include/util/: file_iter.h  util.h
shaders/: compile_shaders.sh  frag.spv.h  shader.frag  shader.vert  vert.spv.h
src/: log.cpp  main.cpp
src/debug/: profiler.cpp
src/editor/: canvas.cpp  dialog.cpp  editor.cpp  help.cpp  screen_pic.cpp  tool.cpp  topology.cpp  window.cpp
src/eol/: battle.cpp  chat.cpp  console.cpp  eol.cpp  eol_table.cpp  fps.cpp  pacer.cpp  settings.cpp  status_messages.cpp  status_messages.h
src/game/: driver.cpp  game.cpp  level_load.cpp  qopen.cpp  recorder.cpp  state.cpp
src/level/: level.cpp  object.cpp  polygon.cpp  segments.cpp  sprite.cpp
src/menu/: ball.cpp  ball_collision.cpp  ball_handler.cpp  best_times.cpp  controls.cpp  dialog.cpp  external.cpp  intro.cpp  main.cpp  nav.cpp  options.cpp  pic.cpp  play.cpp  player.cpp  rec_list.cpp  replay.cpp  replay_cache.cpp  skip.cpp
src/physics/: collision.cpp  flagtag.cpp  forces.cpp  init.cpp  move.cpp
src/pic/: abc8.cpp  anim.cpp  lgr.cpp  pic8.cpp  piclist.cpp  surface.cpp
src/platform/: text_input.cpp
src/platform/sdl/: gl_renderer.cpp  keyboard.cpp  sdl.cpp
src/renderer/: affine.cpp  canvas.cpp  grass.cpp  object_overlay.cpp  render.cpp  timer.cpp
src/sound/: engine.cpp  wav.cpp
src/test/: platform_headless.cpp  platform_headless.h  replay_data_death.h  sound_engine_headless.cpp  test_globals.cpp  test_main.cpp  test_replay.cpp  test_replay.h
src/test/lev/: vsync.lev
src/util/: file_iter.cpp  util.cpp
