project('elma', 'c', 'cpp', version: '1.4', meson_version: '>=1.2.0', default_options: ['cpp_std=c++20'])

add_project_arguments('-DELMA_VERSION="@0@"'.format(meson.project_version()), language: 'cpp')

if get_option('buildtype') == 'debug' or get_option('buildtype') == 'debugoptimized'
    add_project_arguments('-DDEBUG', language: 'cpp')
endif

if get_option('profile_performance') == true
    add_project_arguments('-DPROFILE_PERFORMANCE', language: 'cpp')
endif

elma_sources = files(
    'abc8.cpp',
    'physics_init.cpp',
    'anim.cpp',
    'physics_move.cpp',
    'src/menu/best_times.cpp',
    'src/menu/controls.cpp',
    'editor_dialog.cpp',
    'src/menu/dialog.cpp',
    'timer.cpp',
    'editor_canvas.cpp',
    'affine_pic_render.cpp',
    'D_PIC.CPP',
    'canvas.cpp',
    'editor_help.cpp',
    'src/editor/window.cpp',
    'EDITTOOL.CPP',
    'EDITUJ.CPP',
    'editor_topology.cpp',
    'flagtag.cpp',
    'src/menu/ball_handler.cpp',
    'src/menu/ball.cpp',
    'src/menu/ball_collision.cpp',
    'polygon.cpp',
    'wav.cpp',
    'src/menu/player.cpp',
    'KIRAJ320.CPP',
    'affine_pic.cpp',
    'grass.cpp',
    'src/platform/utils.cpp',
    'LEJATSZO.CPP',
    'physics_forces.cpp',
    'lgr.cpp',
    'level_load.cpp',
    'main.cpp',
    'src/menu/main.cpp',
    'src/menu/external.cpp',
    'src/menu/pic.cpp',
    'src/menu/options.cpp',
    'pic8.cpp',
    'piclist.cpp',
    'src/menu/play.cpp',
    'qopen.cpp',
    'recorder.cpp',
    'src/menu/rec_list.cpp',
    'src/menu/replay.cpp',
    'src/menu/replay_cache.cpp',
    'src/platform/sdl/sdl.cpp',
    'src/platform/sdl/keyboard.cpp',
    'src/menu/skip.cpp',
    'src/eol/status_messages.cpp',
    'state.cpp',
    'segments.cpp',
    'src/menu/intro.cpp',
    'physics_collision.cpp',
    'level.cpp',
    'src/menu/nav.cpp',
    'vect2.cpp',
    'eol_settings.cpp',
    'sound_engine.cpp',
    'keys.cpp',
    'fs_utils.cpp',
    'object.cpp',
    'src/renderer/object_overlay.cpp',
    'sprite.cpp',
    'gl_renderer.cpp',
    'src/debug/profiler.cpp',
    'src/eol/console.cpp',
    'src/eol/eol.cpp',
    'src/eol/eol_table.cpp',
    'src/util/util.cpp',
    'src/glad/glad.c',
)

inc = include_directories('include')

cpp = meson.get_compiler('cpp')
link_args = []
cpp_args = []
deps = []

# Required for nlohmann_json on Apple clang < 12
if cpp.get_id() == 'clang' and cpp.version().version_compare('<12.0')
    add_project_arguments('-DJSON_HAS_CPP_17', language: 'cpp')
endif

win_subsystem = 'windows'
if cpp.get_id() == 'msvc'
    if get_option('buildtype') == 'debug' or get_option('buildtype') == 'debugoptimized' or get_option('profile_performance') == true
        # Allows printf when debugging
        win_subsystem = 'console'
    endif

    if win_subsystem == 'windows'
        # Override windows subsystem entrypoint to main instead of WinMain
        link_args += ['/ENTRY:mainCRTStartup']
    endif
else
    cpp_args += ['-Wno-deprecated-declarations', '-Wunreachable-code']
endif

sdl2_dep = dependency('sdl2',
    static: build_machine.system() == 'windows' or get_option('static_sdl'),
    default_options: {
        'test': false,
        'with_main': false,
    }
)

gl_dep = dependency('gl', required: true)

nlohmann_json_dep = dependency('nlohmann_json')

deps += [nlohmann_json_dep, gl_dep, sdl2_dep]

executable(
    'elma',
    elma_sources,
    include_directories: inc,
    cpp_args: cpp_args,
    link_args: link_args,
    dependencies: deps,
    win_subsystem: win_subsystem,
)

test_sources = files(
    'physics_init.cpp',
    'physics_move.cpp',
    'physics_collision.cpp',
    'physics_forces.cpp',
    'pic8.cpp',
    'level.cpp',
    'segments.cpp',
    'object.cpp',
    'polygon.cpp',
    'sprite.cpp',
    'recorder.cpp',
    'flagtag.cpp',
    'LEJATSZO.CPP',
    'vect2.cpp',
    'src/platform/utils.cpp',
    'fs_utils.cpp',
    'qopen.cpp',
    'eol_settings.cpp',
    'src/util/util.cpp',
    # Headless stubs
    'src/test/platform_headless.cpp',
    'src/test/sound_engine_headless.cpp',
    # Test harness
    'src/test/test_globals.cpp',
    'src/test/test_replay.cpp',
    'src/test/test_main.cpp',
)

elma_physics_test = executable('elma_physics_test', test_sources,
    include_directories: inc,
    cpp_args: cpp_args,
    dependencies: [nlohmann_json_dep],
)

test('elma_physics_test', elma_physics_test,
    workdir: meson.project_source_root() / 'src' / 'test',
)
